--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
     rev: 24.4.2
     hooks:
     -   id: black
+        args: [--line-length=79]
 -   repo: https://github.com/PyCQA/flake8
     rev: 7.1.0
     hooks:
